--- a/TopicModeling_SentimentAnalysis_LDA_using_Scikit_learn.ipynb
+++ b/TopicModeling_SentimentAnalysis_LDA_using_Scikit_learn.ipynb
@@ -3493,6 +3493,14 @@
           "text": [
             "\rTuning n_components:   0%|          | 0/3 [00:00<?, ?it/s]"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "n_topics: 2, learning_decay: 0.5, learning_offset: 10, score: 0.6699\n",
+            "n_topics: 2, learning_decay: 0.5, learning_offset: 50, score: 0.6699\n"
+          ]
         }
       ]
     },
