Added unit test
- Added a test case for data cleaning
- Added the python file for adding it to the docker image

--- a/TopicModeling_SentimentAnalysis_TripAdvisor.ipynb
+++ b/TopicModeling_SentimentAnalysis_TripAdvisor.ipynb
@@ -61,7 +61,7 @@
         },
         "outputId": "6e910bef-1e9b-4112-e31f-1c0ef7a56d56"
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +155,7 @@
         "id": "Hls4sccG9OAa",
         "outputId": "430684b0-d706-4063-f670-0ea5258b22c5"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +475,7 @@
         "plt.gca().spines[['top', 'right',]].set_visible(False)"
       ],
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -519,7 +519,7 @@
         "_ = plt.title('Proportion of Ratings')"
       ],
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,7 +607,7 @@
         "id": "tQLMCL0yqAQt",
         "outputId": "aa172c5c-e41f-4c44-b5a8-2d4f08c89e7d"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -920,6 +920,53 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Unit test\n",
+        "\n",
+        "import re\n",
+        "\n",
+        "def test_remove_punctuation():\n",
+        "    # Test cases with expected outcomes\n",
+        "    test_cases = [\n",
+        "        (\"This is a test string, with lots of: punctuations; in it?!.\", \"This is a test string with lots of punctuations in it\"),\n",
+        "        (\"Hello, world!\", \"Hello world\"),\n",
+        "        (\"123.456\", \"123456\"),\n",
+        "        (\"\", \"\")  # Empty string\n",
+        "    ]\n",
+        "    for text, expected in test_cases:\n",
+        "        # Apply the punctuation removal function from your code\n",
+        "        # Changed to also remove extra spaces resulting from the punctuation removal\n",
+        "        actual = re.sub(r\"[^\\w\\s]\", '', text)\n",
+        "\n",
+        "        # Assert that the actual output matches the expected output\n",
+        "        assert actual == expected, f\"For input '{text}', expected '{expected}', but got '{actual}'\"\n",
+        "    print(\"\\nTest case passed successfully!\\n\\n\")\n",
+        "\n",
+        "test_remove_punctuation()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fCTR_ZJCaXmV",
+        "outputId": "74dc8e91-be06-4f95-a49d-7d280582d72e"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Test case passed successfully!\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "\n",
@@ -1050,7 +1097,7 @@
         "id": "eS0EA3TmuvlB",
         "outputId": "2772c0c4-9c94-4f37-f8e3-b61f3bb2cac9"
       },
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1130,7 +1177,7 @@
         "id": "6PxvUCAYqYlI",
         "outputId": "85d3ba0a-f534-4831-f0c3-6b997ea4e86b"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1229,7 +1276,7 @@
         "id": "YeMcpkLPRmTa",
         "outputId": "bd3329d7-de4c-494e-d375-7e93b7b8724b"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1279,7 +1326,7 @@
         "id": "KpjwwrivAVKg",
         "outputId": "adb6350f-0d50-4077-ca07-d3f0f00a24fb"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1399,7 +1446,7 @@
         "id": "_aKuf4d9qUFb",
         "outputId": "f23ef2b3-6b73-48fa-e2c1-e71f752f5a90"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1519,7 +1566,7 @@
         "id": "u9DNy4hFTxfv",
         "outputId": "84ab721f-9917-43cd-828f-4eff7050d94a"
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1567,7 +1614,7 @@
         "id": "Aj-KJRDzz-Ry",
         "outputId": "69748d0c-2ce3-4fc9-f50d-6a34c09934cd"
       },
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1620,7 +1667,7 @@
         "id": "_vvERhCG0M4X",
         "outputId": "54bdf26a-a0ed-4ac1-a9c0-96cd50ffc1fd"
       },
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1680,7 +1727,7 @@
         "id": "n6y1182m8Zq9",
         "outputId": "6767a238-6e88-4948-86a8-05d2e39f2aad"
       },
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1741,7 +1788,7 @@
         "id": "9vHyuY-bRRv4",
         "outputId": "e40d90b8-27ed-4c64-a106-76b72b06480a"
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1846,7 +1893,7 @@
         "id": "LVRxeWYL9CPu",
         "outputId": "dac39a35-0761-4a3a-ac4e-efc33ac9bcff"
       },
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1890,7 +1937,7 @@
         "id": "S7EqF4fAnUTs",
         "outputId": "20e278c2-527f-43f5-96ab-e0be95c2c37c"
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1950,7 +1997,7 @@
         "id": "q80tX6X-ne93",
         "outputId": "6b1eb383-03c4-4f3b-e8f5-c048dd1b2d78"
       },
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2055,7 +2102,7 @@
         "id": "_K4LDJ0KpToo",
         "outputId": "96c4053f-d2e9-4f96-b673-0ecf1fc03c11"
       },
-      "execution_count": 158,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
